[gd_scene load_steps=13 format=3 uid="uid://cuc37nusx6e0e"]

[ext_resource type="Theme" uid="uid://b6tppincjordy" path="res://ui/main_ui_theme.tres" id="1_yp4uk"]
[ext_resource type="Script" uid="uid://cgm4o80avttry" path="res://ui/screen_ui/save_and_load_menu/load_menu/load_button/load_button.gd" id="2_x54al"]
[ext_resource type="Texture2D" uid="uid://55g0x02evm07" path="res://structures/trees/sheets/tree_triangle_sheet.png" id="3_4rqv8"]
[ext_resource type="Texture2D" uid="uid://nc08yyyg3qtf" path="res://world/proc_gen/world_tiles.png" id="4_i00nt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4rqv8"]
bg_color = Color(0.219931, 0.0478519, 0.0204122, 1)
border_color = Color(0.436703, 0.127744, 0.0713958, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_505hy"]
atlas = ExtResource("4_i00nt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i00nt"]
atlas = ExtResource("3_4rqv8")
region = Rect2(64, 16, 32, 40)

[sub_resource type="Animation" id="Animation_4rqv8"]
resource_name = "stump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(64, 16, 32, 40)]
}

[sub_resource type="Animation" id="Animation_i00nt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(64, 16, 32, 40)]
}

[sub_resource type="Animation" id="Animation_505hy"]
resource_name = "small"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(256, 16, 32, 40)]
}

[sub_resource type="Animation" id="Animation_ihmnb"]
resource_name = "large"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture:region")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(256, 80, 32, 40)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5t37b"]
_data = {
&"RESET": SubResource("Animation_i00nt"),
&"large": SubResource("Animation_ihmnb"),
&"small": SubResource("Animation_505hy"),
&"stump": SubResource("Animation_4rqv8")
}

[node name="LoadButton" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -861.0
offset_bottom = -588.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yp4uk")
script = ExtResource("2_x54al")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_yp4uk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
clip_children = 2
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4rqv8")

[node name="GroundIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.7
offset_left = -14.0
offset_top = -17.0
offset_right = 26.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture = SubResource("AtlasTexture_505hy")

[node name="TreeIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.525
anchor_right = 0.5
anchor_bottom = 0.525
offset_left = -11.0
offset_top = -19.0
offset_right = 21.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
mouse_filter = 2
texture = SubResource("AtlasTexture_i00nt")
stretch_mode = 5

[node name="IconAnimator" type="AnimationPlayer" parent="MarginContainer/HBoxContainer/Panel"]
unique_name_in_owner = true
root_node = NodePath("../TreeIcon")
libraries = {
&"": SubResource("AnimationLibrary_5t37b")
}

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="WorldNameLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme = ExtResource("1_yp4uk")
bbcode_enabled = true
text = "Save 1
"
fit_content = true

[node name="DayLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme = ExtResource("1_yp4uk")
text = "Day X"
fit_content = true
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="SeedLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme = ExtResource("1_yp4uk")
text = "Some Stuff"
fit_content = true
vertical_alignment = 2

[node name="Control2" type="Control" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
mouse_filter = 2

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.457544, 0.585081, 0.28222, 1)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_yp4uk")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Delete"
